--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /dist
 /tmp
 /out-tsc
-/bazel-out
 
 # Node
 /node_modules
@@ -36,7 +35,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-
+/pnpm-lock.yaml
 # System files
 .DS_Store
 Thumbs.db
